--- a/TedLearn/TedLearnPresentation/TedLearnPresentation.csproj
+++ b/TedLearn/TedLearnPresentation/TedLearnPresentation.csproj
@@ -7,7 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="ViewComponents\" />
+    <Folder Include="Views\Components\CourseComponent\" />
     <Folder Include="wwwroot\ckEditorFile\" />
     <Folder Include="wwwroot\Courses\course-demos\" />
     <Folder Include="wwwroot\Courses\course-episodes-file\" />
